<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tally</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="count">账户</string>
    <string name="passwd">密码</string>
    <string name="tip_name">请输入用户名</string>
    <string name="tip_psw">请输入密码</string>
    <string name="btnlogin_txt">登录我的钱包</string>
    <string name="forget_txt">忘记密码</string>
    <string name="itm_td_txt">今日详情</string>
    <string name="itm_stat_txt">统计信息</string>
    <string name="itm_setting_txt">设置</string>
    <string name="itm_history_txt">历史记录</string>
    <string name="user_name">小飞鱼</string>
    <string name="edit_txt">编辑</string>
    <string name="delete_txt">删除</string>
    <string name="edittitle_txt">消费详情</string>
    <string name="cosumename">消费名称</string>
    <string name="cosumetype">消费类型</string>
    <string name="cosumecost">消费金额</string>
    <string name="cosumeloc">消费地点</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>
    <string name="stdatetx">开始日期</string>
    <string name="eddatetx">结束结束</string>
    <string name="arrow">></string>
    <string name="signup">还没有帐号?</string>
    <string name="tip_repsw">重新输入密码</string>
    <string name="signuptx">注册</string>
    <string name="newuser">新用户注册</string>
    <string name="history">账单</string>
</resources>
